--- a/src/main.css
+++ b/src/main.css
@@ -3,5 +3,6 @@
 @tailwind utilities;
 
 :root {
-    font-family: 'ibm plex sans', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+	--color-primary: #1F2937;
+	font-family: 'ibm plex sans', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
