--- a/src/main.css
+++ b/src/main.css
@@ -4,5 +4,6 @@
 
 :root {
 	--color-primary: #1F2937;
+	--color-gray: #e8e8e8;
 	font-family: 'ibm plex sans', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
