--- a/src/main.css
+++ b/src/main.css
@@ -1,21 +1,13 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-
 :root {
 	--color-primary: #1F2937;
-	--color-gray: #e8e8e8;
-	font-family: 'ibm plex sans', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+	--color-gray-1: #505050;
+	--color-gray-2: #e9e9e9;
+	--border-color-1: #ebebeb;
+	--hover-ring-color: var(--color-primary);
+	--radius-1: 4px;
+	--radius-2: 6px;
 }
 
-h1 {
-	@apply text-3xl font-bold;
-}
-
-h2 {
-	@apply text-2xl font-bold;
-}
-
-h3 {
-	@apply text-xl font-bold;
+body {
+	font-family: 'Public Sans', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
