--- a/src/main.css
+++ b/src/main.css
@@ -6,8 +6,12 @@
 	--border-color-1: #ebebeb;
 	--text-color-1: rgb(60, 60, 63);
 	--hover-ring-color: var(--color-primary);
+	--shadow-sm: 0px 4px 8px rgba(0, 0, 0, 0.04), 0px 0px 2px rgba(0, 0, 0, 0.06), 0px 0px 1px rgba(0, 0, 0, 0.04);
+	--shadow-md: 0px 10px 20px rgba(0, 0, 0, 0.04), 0px 2px 6px rgba(0, 0, 0, 0.04), 0px 0px 1px rgba(0, 0, 0, 0.04);
+	--shadow-lg: 0px 16px 24px rgba(0, 0, 0, 0.06), 0px 2px 6px rgba(0, 0, 0, 0.04), 0px 0px 1px rgba(0, 0, 0, 0.04);
 	--radius-1: 4px;
 	--radius-2: 6px;
+	--outline-border: 0px 0px 0px 1px var(--color-primary);
 }
 
 body {
