--- a/src/main.css
+++ b/src/main.css
@@ -11,6 +11,7 @@
 	--shadow-lg: 0px 16px 24px rgba(0, 0, 0, 0.06), 0px 2px 6px rgba(0, 0, 0, 0.04), 0px 0px 1px rgba(0, 0, 0, 0.04);
 	--radius-1: 4px;
 	--radius-2: 6px;
+	--input-min-width: 300px;
 	--outline-border: 0px 0px 0px 1px var(--color-primary);
 }
 
