--- a/src/main.css
+++ b/src/main.css
@@ -4,7 +4,8 @@
 	--color-gray-2: #e6ebee77;
 	--color-gray-3: #e6ebee3b;
 	--border-color-1: #ebebeb;
-	--text-color-1: rgb(60, 60, 63);
+	--text-color-1: #3c3c3f;
+	--text-color-2: #59595e;
 	--hover-ring-color: var(--color-primary);
 	--shadow-sm: 0px 4px 8px rgba(0, 0, 0, 0.04), 0px 0px 2px rgba(0, 0, 0, 0.06), 0px 0px 1px rgba(0, 0, 0, 0.04);
 	--shadow-md: 0px 10px 20px rgba(0, 0, 0, 0.04), 0px 2px 6px rgba(0, 0, 0, 0.04), 0px 0px 1px rgba(0, 0, 0, 0.04);
