refactor: change google fonts import mode

--- a/src/main.css
+++ b/src/main.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Public+Sans:wght@300;400;700&display=swap');
+
 :root {
 	--color-primary: #1F2937;
 	--color-gray-1: #cccccc;
