--- a/src/main.scss
+++ b/src/main.scss
@@ -1,13 +1,17 @@
 @import url('https://fonts.googleapis.com/css2?family=Public+Sans:wght@300;400;700&display=swap');
+@import './scss/color.scss';
 
 :root {
-	--color-primary: #1F2937;
-	--color-gray-1: #cccccc;
-	--color-gray-2: #e6ebee77;
-	--color-gray-3: #e6ebee3b;
-	--border-color-1: #ebebeb;
-	--text-color-1: #3c3c3f;
-	--text-color-2: #59595e;
+	--color-primary: #{$color-primary};
+	--color-danger: #{$color-danger};
+	--color-success: #{$color-success};
+	--color-info: #{$color-info};
+	--color-gray-1: #{$color-gray-1};
+	--color-gray-2: #{$color-gray-2};
+	--color-gray-3: #{$color-gray-3};
+	--border-color-1: #{$border-color-1};
+	--text-color-1: #{$text-color-1};
+	--text-color-2: #{$text-color-2};
 	--hover-ring-color: var(--color-primary);
 	--shadow-sm: 0px 4px 8px rgba(0, 0, 0, 0.04), 0px 0px 2px rgba(0, 0, 0, 0.06), 0px 0px 1px rgba(0, 0, 0, 0.04);
 	--shadow-md: 0px 10px 20px rgba(0, 0, 0, 0.04), 0px 2px 6px rgba(0, 0, 0, 0.04), 0px 0px 1px rgba(0, 0, 0, 0.04);
@@ -18,11 +22,10 @@
 	--outline-border: 0px 0px 0px 1px var(--color-primary);
 }
 
-body {
+body, button {
 	font-family: 'Public Sans', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 ul {
 	padding: 0;
-	list-style: none;
 }
