feat: add secondary color

--- a/src/main.scss
+++ b/src/main.scss
@@ -3,6 +3,7 @@
 
 :root {
 	--color-primary: #{$color-primary};
+	--color-secondary: #{$color-secondary};
 	--color-danger: #{$color-danger};
 	--color-success: #{$color-success};
 	--color-info: #{$color-info};
