fix: invalid class in mixin

--- a/src/scss/utilities.scss
+++ b/src/scss/utilities.scss
@@ -2,7 +2,7 @@
 	#{$parent + '.sm'} {
 		min-height: 37px;
 	}
-	#{$parent + 'md'} {
+	#{$parent + '.md'} {
 		min-height: 53px;
 	}
 	#{$parent + '.lg'} {
