feat: add content animation

--- a/src/main.scss
+++ b/src/main.scss
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Public+Sans:wght@300;400;700&display=swap');
 @import './scss/color.scss';
+@import './scss/animation.scss';
 
 :root {
 	--color-primary: #{$color-primary};
